# solanaceae_factorio

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml
plugins/: CMakeLists.txt  plugin_factorio.cpp
src/: CMakeLists.txt  factorio.cpp  factorio.hpp  factorio_log_parser.cpp  factorio_log_parser.hpp  log_parse.cpp  log_parse.hpp
test/: CMakeLists.txt  test1.cpp
